<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_item_base"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_task_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/task_title"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_employee"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/employee_name"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_task_title"
                app:layout_constraintStart_toStartOf="@+id/tv_task_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_task_title" />

            <TextView
                android:id="@+id/tv_deadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/deadline"
                app:layout_constraintEnd_toEndOf="@+id/tv_employee"
                app:layout_constraintStart_toStartOf="@+id/tv_employee"
                app:layout_constraintTop_toBottomOf="@+id/tv_employee" />

            <TextView
                android:id="@+id/tv_project_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/project_name"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_deadline"
                app:layout_constraintStart_toStartOf="@+id/tv_deadline"
                app:layout_constraintTop_toBottomOf="@+id/tv_deadline" />

            <TextView
                android:id="@+id/tv_deadline_project"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/deadline_project"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_project_name"
                app:layout_constraintStart_toStartOf="@+id/tv_project_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_project_name" />

            <TextView
                android:id="@+id/tv_department"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/department"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_deadline_project"
                app:layout_constraintStart_toStartOf="@+id/tv_deadline_project"
                app:layout_constraintTop_toBottomOf="@+id/tv_deadline_project" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_department"
                app:layout_constraintStart_toStartOf="@+id/tv_project_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_department" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>